chore: use code snippets with test program

--- a/docs/docs/noir/standard_library/cryptographic_primitives/hashes.mdx
+++ b/docs/docs/noir/standard_library/cryptographic_primitives/hashes.mdx
@@ -58,12 +58,7 @@ fn pedersen_hash(_input : [Field]) -> Field
 
 example:
 
-```rust
-fn main() {
-    let x = [163, 117, 178, 149]; // some random bytes
-    let hash = std::hash::pedersen_hash(x);
-}
-```
+#include_code pedersen-hash test_programs/execution_success/pedersen_hash/src/main.nr rust
 
 <BlackBoxInfo />
 
