chore: pedersen commitment snippet

--- a/docs/docs/noir/standard_library/cryptographic_primitives/hashes.mdx
+++ b/docs/docs/noir/standard_library/cryptographic_primitives/hashes.mdx
@@ -78,9 +78,7 @@ example:
 
 Given an array of Fields, returns the Pedersen commitment.
 
-```rust
-fn pedersen_commitment(_input : [Field]) -> [Field; 2]
-```
+#include_code pedersen_commitment noir_stdlib/src/hash.nr rust
 
 example:
 
