feat(docs): Docs deeper dive into unconstrained functions (#4233)
Closes https://github.com/AztecProtocol/dev-rel/issues/140

This is the new text -
https://github.com/AztecProtocol/aztec-packages/pull/4233/files#diff-5cb9aa6cb90dbac61cb1828879ea8a227933807363bcf53683e7c7a833e27e0bR75

---------

Co-authored-by: josh crites <critesjosh@gmail.com>
Co-authored-by: Josh Crites <jc@joshcrites.com>

--- a/docs/docs/developers/contracts/syntax/context.mdx
+++ b/docs/docs/developers/contracts/syntax/context.mdx
@@ -99,7 +99,7 @@ The `args_hash` is the result of pedersen hashing all of a function's inputs.
 
 ### Return Values
 
-The return values are a set of values that are returned from an applications execution to be passed to other functions through the kernel. Developers do not need to worry about passing their function return values to the `context` directly as `Aztec.nr` takes care of it for you. See the documentation surrounding `Aztec.nr` [macro expansion](./functions.md#after-expansion) for more details.
+The return values are a set of values that are returned from an applications execution to be passed to other functions through the kernel. Developers do not need to worry about passing their function return values to the `context` directly as `Aztec.nr` takes care of it for you. See the documentation surrounding `Aztec.nr` [macro expansion](./functions/inner_workings.md#after-expansion) for more details.
 
     return_values : BoundedVec<Field, RETURN_VALUES_LENGTH>,
 
