docs: add docs for the lt method

--- a/docs/docs/noir/standard_library/bn254.md
+++ b/docs/docs/noir/standard_library/bn254.md
@@ -10,7 +10,7 @@ Noir provides a module in standard library with some optimized functions for bn2
 fn decompose(x: Field) -> (Field, Field) {}
 ```
 
-Decomposes a single field into two 16 byte fields, low and high.
+Decomposes a single field into two fields, low and high. The low field contains the lower 16 bytes of the input field and the high field contains the upper 16 bytes of the input field. Both field results are range checked to 128 bits.
 
 
 ## assert_gt
