--- a/docs/docs/noir/standard_library/cryptographic_primitives/eddsa.mdx
+++ b/docs/docs/noir/standard_library/cryptographic_primitives/eddsa.mdx
@@ -19,7 +19,7 @@ fn eddsa_poseidon_verify(public_key_x : Field, public_key_y : Field, signature_s
 
 ## eddsa::eddsa_to_pub
 
-Private to public key conversion for EdDSA signatures.
+Private to public key conversion.
 
 Returns `(pub_key_x, pub_key_y)`
 
