--- a/docs/docs/noir/standard_library/cryptographic_primitives/hashes.mdx
+++ b/docs/docs/noir/standard_library/cryptographic_primitives/hashes.mdx
@@ -20,7 +20,7 @@ example:
 
 ```rust
 fn main() {
-    let x = [163, 117, 178, 149]; // some random bytes
+    let x = &[163, 117, 178, 149]; // some random bytes
     let hash = std::hash::sha256(x);
 }
 ```
@@ -37,7 +37,7 @@ example:
 
 ```rust
 fn main() {
-    let x = [163, 117, 178, 149]; // some random bytes
+    let x = &[163, 117, 178, 149]; // some random bytes
     let hash = std::hash::blake2s(x);
 }
 ```
@@ -54,7 +54,7 @@ example:
 
 ```rust
 fn main() {
-    let x = [163, 117, 178, 149]; // some random bytes
+    let x = &[163, 117, 178, 149]; // some random bytes
     let hash = std::hash::blake3(x);
 }
 ```
@@ -156,7 +156,7 @@ fn main() {
 ## hash_to_field
 
 ```rust
-fn hash_to_field<N>(_input : [Field; N]) -> Field {}
+fn hash_to_field(_input : [Field]) -> Field {}
 ```
 
 Calculates the `blake2s` hash of the inputs and returns the hash modulo the field modulus to return
