update docs pass: add missing as_slice's, fix old types for stdlib functions in docs, document slice literals, doc slice len, add docs for _array hash/verify/trait methods, add missing doc ref for pedersen_commitment_array

--- a/docs/docs/noir/standard_library/containers/vec.mdx
+++ b/docs/docs/noir/standard_library/containers/vec.mdx
@@ -49,8 +49,8 @@ pub fn from_slice(slice: [T]) -> Self
 Example:
 
 ```rust
-let arr: [Field] = &[1, 2, 3];
-let vector_from_slice = Vec::from_slice(arr);
+let slice: [Field] = &[1, 2, 3];
+let vector_from_slice = Vec::from_slice(slice);
 assert(vector_from_slice.len() == 3);
 ```
 
