--- a/docs/docs/noir/concepts/data_types/slices.mdx
+++ b/docs/docs/noir/concepts/data_types/slices.mdx
@@ -22,6 +22,8 @@ fn main() -> pub Field {
 }
 ```
 
+Note that slice literals have a preceeding ampersand, e.g. `&[0; 2]` or `&[1, 2, 3]`.
+
 View the corresponding test file [here][test-file].
 
 [test-file]: https://github.com/noir-lang/noir/blob/f387ec1475129732f72ba294877efdf6857135ac/crates/nargo_cli/tests/test_data_ssa_refactor/slices/src/main.nr
@@ -144,4 +146,21 @@ Example:
 
 ```rust
 let (remove_slice, removed_elem) = slice.remove(3);
+```
+
+### len
+
+Returns the length of a slice
+
+```rust
+fn len(self) -> Field
+```
+
+Example:
+
+```rust
+fn main() {
+    let slice = &[42, 42];
+    assert(slice.len() == 2);
+}
 ```
