--- a/docs/docs/noir/standard_library/cryptographic_primitives/ecdsa_sig_verification.mdx
+++ b/docs/docs/noir/standard_library/cryptographic_primitives/ecdsa_sig_verification.mdx
@@ -11,7 +11,8 @@ Noir supports ECDSA signatures verification over the secp256k1 and secp256r1 cur
 
 ## ecdsa_secp256k1::verify_signature
 
-Verifier for ECDSA Secp256k1 signatures
+Verifier for ECDSA Secp256k1 signatures.
+See ecdsa_secp256k1::verify_signature_array for a version that accepts arrays directly.
 
 #include_code ecdsa_secp256k1 noir_stdlib/src/ecdsa_secp256k1.nr rust
 
@@ -19,14 +20,25 @@ example:
 
 ```rust
 fn main(hashed_message : [u8;32], pub_key_x : [u8;32], pub_key_y : [u8;32], signature : [u8;64]) {
-     let valid_signature = std::ecdsa_secp256k1::verify_signature(pub_key_x, pub_key_y, signature, hashed_message);
+     let valid_signature = std::ecdsa_secp256k1::verify_signature(pub_key_x, pub_key_y, signature, hashed_message.as_slice());
      assert(valid_signature);
 }
 ```
 
+<BlackBoxInfo />
+
+## ecdsa_secp256k1::verify_signature_array
+
+Verifier for ECDSA Secp256k1 signatures where the message is an array.
+
+#include_code ecdsa_secp256k1_array noir_stdlib/src/ecdsa_secp256k1.nr rust
+
+<BlackBoxInfo />
+
 ## ecdsa_secp256r1::verify_signature
 
-Verifier for ECDSA Secp256r1 signatures
+Verifier for ECDSA Secp256r1 signatures.
+See ecdsa_secp256r1::verify_signature_array for a version that accepts arrays directly.
 
 #include_code ecdsa_secp256r1 noir_stdlib/src/ecdsa_secp256r1.nr rust
 
@@ -34,9 +46,17 @@ example:
 
 ```rust
 fn main(hashed_message : [u8;32], pub_key_x : [u8;32], pub_key_y : [u8;32], signature : [u8;64]) {
-     let valid_signature = std::ecdsa_secp256r1::verify_signature(pub_key_x, pub_key_y, signature, hashed_message);
+     let valid_signature = std::ecdsa_secp256r1::verify_signature(pub_key_x, pub_key_y, signature, hashed_message.as_slice());
      assert(valid_signature);
 }
 ```
+
+<BlackBoxInfo />
+
+## ecdsa_secp256r1::verify_signature_array
+
+Verifier for ECDSA Secp256r1 signatures where the message is an array.
+
+#include_code ecdsa_secp256r1_array noir_stdlib/src/ecdsa_secp256r1.nr rust
 
 <BlackBoxInfo />
