--- a/docs/docs/noir/standard_library/cryptographic_primitives/hashes.mdx
+++ b/docs/docs/noir/standard_library/cryptographic_primitives/hashes.mdx
@@ -12,7 +12,8 @@ import BlackBoxInfo from '@site/src/components/Notes/_blackbox.mdx';
 
 ## sha256
 
-Given an array of bytes, returns the resulting sha256 hash.
+Given a slice of bytes, returns the resulting sha256 hash.
+See sha256_array for a version that works directly on arrays.
 
 #include_code sha256 noir_stdlib/src/hash.nr rust
 
@@ -27,9 +28,18 @@ fn main() {
 
 <BlackBoxInfo />
 
+## sha256_array
+
+A version of sha256 specialized to arrays:
+
+#include_code sha256_array noir_stdlib/src/hash.nr rust
+
+<BlackBoxInfo />
+
 ## blake2s
 
-Given an array of bytes, returns an array with the Blake2 hash
+Given a slice of bytes, returns an array with the Blake2 hash
+See blake2s_array for a version that works directly on arrays.
 
 #include_code blake2s noir_stdlib/src/hash.nr rust
 
@@ -44,9 +54,18 @@ fn main() {
 
 <BlackBoxInfo />
 
+## blake2s_array
+
+A version of blake2s specialized to arrays:
+
+#include_code blake2s_array noir_stdlib/src/hash.nr rust
+
+<BlackBoxInfo />
+
 ## blake3
 
-Given an array of bytes, returns an array with the Blake3 hash
+Given a slice of bytes, returns an array with the Blake3 hash
+See blake3_array for a version that works directly on arrays.
 
 #include_code blake3 noir_stdlib/src/hash.nr rust
 
@@ -61,9 +80,18 @@ fn main() {
 
 <BlackBoxInfo />
 
+## blake3_array
+
+A version of blake3 specialized to arrays:
+
+#include_code blake3_array noir_stdlib/src/hash.nr rust
+
+<BlackBoxInfo />
+
 ## pedersen_hash
 
-Given an array of Fields, returns the Pedersen hash.
+Given a slice of Fields, returns the Pedersen hash.
+See pedersen_hash_array for a version that works directly on arrays.
 
 #include_code pedersen_hash noir_stdlib/src/hash.nr rust
 
@@ -73,10 +101,18 @@ example:
 
 <BlackBoxInfo />
 
+## pedersen_hash_array
+
+Given an array of Fields, returns the Pedersen hash.
+
+#include_code pedersen_hash_array noir_stdlib/src/hash.nr rust
+
+<BlackBoxInfo />
 
 ## pedersen_commitment
 
-Given an array of Fields, returns the Pedersen commitment.
+Given a slice of Fields, returns the Pedersen commitment.
+See pedersen_commitment_array for a version that works directly on arrays.
 
 #include_code pedersen_commitment noir_stdlib/src/hash.nr rust
 
@@ -86,17 +122,36 @@ example:
 
 <BlackBoxInfo />
 
+## pedersen_commitment_array
+
+Given an array of Fields, returns the Pedersen commitment.
+
+#include_code pedersen_commitment_array noir_stdlib/src/hash.nr rust
+
+<BlackBoxInfo />
+
 ## keccak256
 
-Given an array of bytes (`u8`), returns the resulting keccak hash as an array of 32 bytes
-(`[u8; 32]`). Specify a message_size to hash only the first `message_size` bytes
-of the input.
+Given a slice of bytes (`u8`), returns the resulting keccak hash as an array of
+32 bytes (`[u8; 32]`).
+See keccak256_array for a version that works directly on arrays and supports
+hashing only the first `message_size` bytes of the input.
 
 #include_code keccak256 noir_stdlib/src/hash.nr rust
 
 example:
 
 #include_code keccak256 test_programs/execution_success/keccak256/src/main.nr rust
+
+<BlackBoxInfo />
+
+## keccak256_array
+
+Given an array of bytes (`u8`), returns the resulting keccak hash as an array of
+32 bytes (`[u8; 32]`). Specify a message_size to hash only the first
+`message_size` bytes of the input.
+
+#include_code keccak256_array noir_stdlib/src/hash.nr rust
 
 <BlackBoxInfo />
 
