--- a/docs/docs/noir/standard_library/cryptographic_primitives/schnorr.mdx
+++ b/docs/docs/noir/standard_library/cryptographic_primitives/schnorr.mdx
@@ -10,6 +10,7 @@ import BlackBoxInfo from '@site/src/components/Notes/_blackbox.mdx';
 ## schnorr::verify_signature
 
 Verifier for Schnorr signatures over the embedded curve (for BN254 it is Grumpkin).
+See schnorr::verify_signature_array for a version that works directly on arrays.
 
 #include_code schnorr_verify noir_stdlib/src/schnorr.nr rust
 
@@ -32,5 +33,14 @@ const signature = Array.from(
 
 ...
 ```
+
+<BlackBoxInfo />
+
+## schnorr::verify_signature_array
+
+Verifier for Schnorr signatures over the embedded curve (for BN254 it is Grumpkin)
+where the message is an array. 
+
+#include_code schnorr_verify_array noir_stdlib/src/schnorr.nr rust
 
 <BlackBoxInfo />
