fix duplicated error match from merging master, add docs differentiating slices from references to arrays, switch _array and _slice type defaults and updates docs/tests

--- a/docs/docs/noir/standard_library/cryptographic_primitives/hashes.mdx
+++ b/docs/docs/noir/standard_library/cryptographic_primitives/hashes.mdx
@@ -12,8 +12,8 @@ import BlackBoxInfo from '@site/src/components/Notes/_blackbox.mdx';
 
 ## sha256
 
-Given a slice of bytes, returns the resulting sha256 hash.
-See sha256_array for a version that works directly on arrays.
+Given an array of bytes, returns the resulting sha256 hash.
+See sha256_slice for a version that works directly on slices.
 
 #include_code sha256 noir_stdlib/src/hash.nr rust
 
@@ -21,25 +21,25 @@ example:
 
 ```rust
 fn main() {
-    let x = &[163, 117, 178, 149]; // some random bytes
+    let x = [163, 117, 178, 149]; // some random bytes
     let hash = std::hash::sha256(x);
 }
 ```
 
 <BlackBoxInfo />
 
-## sha256_array
+## sha256_slice
 
-A version of sha256 specialized to arrays:
+A version of sha256 specialized to slices:
 
-#include_code sha256_array noir_stdlib/src/hash.nr rust
+#include_code sha256_slice noir_stdlib/src/hash.nr rust
 
 <BlackBoxInfo />
 
 ## blake2s
 
-Given a slice of bytes, returns an array with the Blake2 hash
-See blake2s_array for a version that works directly on arrays.
+Given an array of bytes, returns an array with the Blake2 hash
+See blake2s_slice for a version that works directly on slices.
 
 #include_code blake2s noir_stdlib/src/hash.nr rust
 
@@ -47,25 +47,25 @@ example:
 
 ```rust
 fn main() {
-    let x = &[163, 117, 178, 149]; // some random bytes
+    let x = [163, 117, 178, 149]; // some random bytes
     let hash = std::hash::blake2s(x);
 }
 ```
 
 <BlackBoxInfo />
 
-## blake2s_array
+## blake2s_slice
 
-A version of blake2s specialized to arrays:
+A version of blake2s specialized to slices:
 
-#include_code blake2s_array noir_stdlib/src/hash.nr rust
+#include_code blake2s_slice noir_stdlib/src/hash.nr rust
 
 <BlackBoxInfo />
 
 ## blake3
 
-Given a slice of bytes, returns an array with the Blake3 hash
-See blake3_array for a version that works directly on arrays.
+Given an array of bytes, returns an array with the Blake3 hash
+See blake3_slice for a version that works directly on slices.
 
 #include_code blake3 noir_stdlib/src/hash.nr rust
 
@@ -73,25 +73,25 @@ example:
 
 ```rust
 fn main() {
-    let x = &[163, 117, 178, 149]; // some random bytes
+    let x = [163, 117, 178, 149]; // some random bytes
     let hash = std::hash::blake3(x);
 }
 ```
 
 <BlackBoxInfo />
 
-## blake3_array
+## blake3_slice
 
-A version of blake3 specialized to arrays:
+A version of blake3 specialized to slices:
 
-#include_code blake3_array noir_stdlib/src/hash.nr rust
+#include_code blake3_slice noir_stdlib/src/hash.nr rust
 
 <BlackBoxInfo />
 
 ## pedersen_hash
 
-Given a slice of Fields, returns the Pedersen hash.
-See pedersen_hash_array for a version that works directly on arrays.
+Given an array of Fields, returns the Pedersen hash.
+See pedersen_hash_slice for a version that works directly on slices.
 
 #include_code pedersen_hash noir_stdlib/src/hash.nr rust
 
@@ -101,18 +101,18 @@ example:
 
 <BlackBoxInfo />
 
-## pedersen_hash_array
+## pedersen_hash_slice
 
-Given an array of Fields, returns the Pedersen hash.
+Given a slice of Fields, returns the Pedersen hash.
 
-#include_code pedersen_hash_array noir_stdlib/src/hash.nr rust
+#include_code pedersen_hash_slice noir_stdlib/src/hash.nr rust
 
 <BlackBoxInfo />
 
 ## pedersen_commitment
 
-Given a slice of Fields, returns the Pedersen commitment.
-See pedersen_commitment_array for a version that works directly on arrays.
+Given an array of Fields, returns the Pedersen commitment.
+See pedersen_commitment_slice for a version that works directly on slices.
 
 #include_code pedersen_commitment noir_stdlib/src/hash.nr rust
 
@@ -122,20 +122,20 @@ example:
 
 <BlackBoxInfo />
 
-## pedersen_commitment_array
+## pedersen_commitment_slice
 
-Given an array of Fields, returns the Pedersen commitment.
+Given a slice of Fields, returns the Pedersen commitment.
 
-#include_code pedersen_commitment_array noir_stdlib/src/hash.nr rust
+#include_code pedersen_commitment_slice noir_stdlib/src/hash.nr rust
 
 <BlackBoxInfo />
 
 ## keccak256
 
-Given a slice of bytes (`u8`), returns the resulting keccak hash as an array of
-32 bytes (`[u8; 32]`).
-See keccak256_array for a version that works directly on arrays and supports
-hashing only the first `message_size` bytes of the input.
+Given an array of bytes (`u8`), returns the resulting keccak hash as an array of
+32 bytes (`[u8; 32]`). Specify a message_size to hash only the first
+`message_size` bytes of the input. See keccak256_slice for a version that works
+directly on slices.
 
 #include_code keccak256 noir_stdlib/src/hash.nr rust
 
@@ -145,13 +145,12 @@ example:
 
 <BlackBoxInfo />
 
-## keccak256_array
+## keccak256_slice
 
-Given an array of bytes (`u8`), returns the resulting keccak hash as an array of
-32 bytes (`[u8; 32]`). Specify a message_size to hash only the first
-`message_size` bytes of the input.
+Given a slice of bytes (`u8`), returns the resulting keccak hash as an array of
+32 bytes (`[u8; 32]`).
 
-#include_code keccak256_array noir_stdlib/src/hash.nr rust
+#include_code keccak256_slice noir_stdlib/src/hash.nr rust
 
 <BlackBoxInfo />
 
