--- a/docs/docs/noir/concepts/data_types/slices.mdx
+++ b/docs/docs/noir/concepts/data_types/slices.mdx
@@ -22,7 +22,11 @@ fn main() -> pub Field {
 }
 ```
 
-Note that slice literals have a preceeding ampersand, e.g. `&[0; 2]` or `&[1, 2, 3]`.
+To write a slice literal, use a preceeding ampersand as in: `&[0; 2]` or
+`&[1, 2, 3]`.
+
+It is important to note that slices are not references to arrays. In Noir,
+`&[..]` is more similar to an immutable, growable vector.
 
 View the corresponding test file [here][test-file].
 
